[tool.poetry]
name = "my-new-project"
version = "0.1.0"
description = ""
authors = ["Alexander_Dulalaev <camel1985@mail.ru>"]
readme = "README.md"
packages = [{include = "my_new_project"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
flake8 = "^5.0.4"
selenium = "^4.5.0"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
